Added support for creating sets.

--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,15 @@ th {
     color: #999;
     padding: 0.5em 1.0em;
 }
+
+#set-date {
+    width: auto;
+}
+
+#num-sets, #num-reps {
+    width: 50px;
+}
+
+#add-set-button {
+    width: 100px;
+}
